--- a/css/style.css
+++ b/css/style.css
@@ -493,20 +493,32 @@ img{
 }
 
 /*Css para el formulario*/
-
-section.contacto {
+.contacto {
+    padding: 4rem 1rem;
     width: 100%;
     margin: var(--padding-container) auto;
-    padding: var(--padding-container);
     background-color: var(--alice-blue);
 }
 
-section.contacto h2 {
-    font-size: var(--font-size-xl);
-    font-weight: var(--font-weight-semibold);
+.contacto h2{
+    font-family: "Gotham", sans-serif;
     color: var(--universo-blue);
+    font-size: 2rem;           
+    font-weight: 900;
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
+    letter-spacing: 1px;    
+}
+
+.contacto .textoContacto {
+    text-align: center;
+    font-family: "Gotham", sans-serif;
+    max-width: 1000px;
+    margin: 1.5rem auto; 
+    margin-bottom: 40px;       
+    font-size: 1.125rem;       
+    line-height: 1.7;
+    color: #2d2f4f;               
 }
 
 .contacto-contenido {
