--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,9 @@ header .navbar{
 /* Estilo servicios*/
 
 .nuestros-servicios{
-    padding: 4rem 1rem;
+    padding: 1.5rem 1rem;
+    margin-bottom: 0;
+    margin-top: 100px;
     background-color: var(--white-color);
     text-align: center;
 }
@@ -255,16 +257,18 @@ header .navbar{
 .nuestros-servicios h2 {
     font-family: "Gotham", sans-serif;
     color: var(--universo-blue);
-    font-size: 1.7rem;           
-    font-weight: 700;
+    font-size: 2.3rem;           
+    font-weight: 900;
+    text-align: center;
     margin-bottom: 1rem;
-    letter-spacing: 1px;
+    letter-spacing: 1px;   
 }
 
 .nuestros-servicios .servicios-texto {
     font-family: "Gotham", sans-serif;
     max-width: 1200px;
-    margin: 1.5rem auto;        
+    margin-top:30px;
+    margin-bottom: 60px;    
     font-size: 1.125rem;       
     line-height: 1.7;
     color: #2d2f4f;               
@@ -272,6 +276,8 @@ header .navbar{
 
 /*estilo cartas servicios*/
 /* Estilo para el contenedor de cartas */
+
+
 .cartas-contenedor {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -365,9 +371,24 @@ header .navbar{
 
 /* Estilo para el botón "Más Información" */
 .boton {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 1rem;              
+    margin-top: 0rem;
+    margin-bottom: 0rem;
+    padding: 3rem 1rem;          
     text-align: center;
-    margin-top: 50px;
 }
+
+.boton h3 {
+    font-family: "Gotham", sans-serif;    
+    font-size: 1.9rem;                 
+    font-weight: 600;
+    color: var(--bice-blue);     
+    margin-bottom: 1.5rem;           
+    line-height: 1.3;
+    }
 
 .mas-info {
     display: inline-block;
@@ -390,16 +411,56 @@ header .navbar{
     box-shadow: 0 5px 15px rgba(30, 78, 122, 0.3);
 }
 
-
-.nuestros-clientes h2{
-    margin-bottom: 40px;
-    color: var(--universo-blue);
+.nuestros-clientes{
+    margin-bottom: 0px;
 }
 
+.nuestros-clientes h2{
+    font-family: "Gotham", sans-serif;
+    color: var(--universo-blue);
+    font-size: 2.3rem;           
+    font-weight: 900;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 1rem;
+    letter-spacing: 1px;   
+}
+
+.nuestros-clientes .textoClientes{
+    text-align: center;
+    font-family: "Gotham", sans-serif;
+    max-width: 1000px;
+    margin: 1.5rem auto; 
+    margin-bottom: 40px;       
+    font-size: 1.125rem;       
+    line-height: 1.7;
+    color: #2d2f4f;  
+}
+
+.se-parte {
+    display: inline-block;
+    font-family: "Gotham", sans-serif;
+    text-decoration: none;
+    padding: 15px 35px;
+    background: var(--universo-blue);
+    color: var(--white-color);
+    border: 2px solid transparent;
+    border-radius: var(--border-radius-m);
+    font-weight: var(--font-weigth-semibold);
+    transition: all 0.3s ease;
+}
+
+.se-parte:hover {
+    background: transparent;
+    color: var(--bice-blue);
+    border: 2px solid;
+    border-color: var(--bice-blue);
+    box-shadow: 0 5px 15px rgba(30, 78, 122, 0.3);
+}
 /*editar carousel */ 
 .carousel-clientes-wrapper{
+    position: relative;
     display: flex;
-    overflow: visible;
     align-items: center;
     justify-content: center;
     gap: 1rem;
@@ -408,22 +469,34 @@ header .navbar{
 }
 
 .carousel-clientes {
+    position: relative;
+    overflow: hidden;
     width: 100%;
     max-width: 900px;
-    display: flex;
-    justify-content: center;
+    height: 260px;
 }
 
 .slide{
-    display: none;
-    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     gap: 2rem;
     flex-wrap: wrap;
-    width: 100%;
+    transition: opacity 0.6s ease;
+    opacity: 0;                 
+    z-index: 0;                    /* Por debajo del slide activo */
+    visibility: hidden; 
 }
 
 .slide.active{
-    display: flex;
+    opacity: 1;
+    visibility: visible;
+    z-index: 1; /* Lo pone encima de los demás slides */
 }
 
 .cliente-carta{
@@ -437,7 +510,7 @@ header .navbar{
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: all 0.3s ease;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .cliente-carta:hover{
