--- a/css/style-gestion.css
+++ b/css/style-gestion.css
@@ -199,8 +199,6 @@ header .navbar{
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1); /* para efecto sutil */
 }
 
-
-
 .navbar .nav_img{
     width: 100px; 
     height: auto;
@@ -208,10 +206,90 @@ header .navbar{
     transition: 0.3s ease;
 }
 
-main {
-  margin-top: 80px;
+body {
+  padding-top: 120px;
 }
 
+#login {
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    padding: 2rem;
+    padding-bottom: 45px;
+    width: 100%;
+    max-width: 400px;
+    margin: 2rem auto;
+    text-align: center;
+}
+
+#login h2 {
+    font-family: "Gotham", sans-serif;
+    margin-bottom: fon;
+    font-size: var(--font-size-xl);
+    color: #333;
+}
+
+
+#login p {
+    font-family: "Gotham", sans-serif;
+    font-size: var(--font-size-n);
+    color: #555;
+    margin-bottom: 1.5rem;
+    line-height: 1.4;
+}
+
+#login input[type="password"] {
+    font-family: "Gotham", sans-serif;
+    width: 100%;
+    max-width: 280px;
+    padding: 0.5rem 0.75rem;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin: 0.5rem 0;
+}
+
+#login button {
+    font-family: "Gotham", sans-serif;
+    margin-top: 1rem;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    background-color: var(--lake-blue); /* color primario Bootstrap */
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+}
+
+#login button:hover {
+    background-color: var(--universo-blue);
+}
+
+#login .alert {
+    margin: 0 auto;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1rem;
+    width: 100%;
+    max-width: 280px;
+    border-radius: 4px;
+    }
+
+#login .alert svg {
+    width: 1rem;
+    height: 1rem;
+    margin-right: 0.25rem; /* espacio pequeño entre ícono y texto */
+}
+
+#success-msg,
+#error-msg {
+    font-family: "Gotham", sans-serif;
+    padding: 0.25rem 0.5rem; 
+    font-size: 0.85rem;     
+    text-align: center;  
+}
 
 /*FOOTER*/
 .footer {
